--- a/reyes_ncp3106/index.css
+++ b/reyes_ncp3106/index.css
@@ -26,7 +26,9 @@ header {
 nav ul {
     list-style: none;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    font-size: 21px;
+    flex-direction: row;
 }
 
 nav ul li {
@@ -51,7 +53,8 @@ section {
 }
 
 #home {
-    background: linear-gradient(60deg, #F7E7DC, #758694);
+    background: linear-gradient(203deg, #F7E7DC, #758694);
+    
 }
 
 #about {
@@ -77,13 +80,81 @@ footer {
 
 /* ========== */
 
-#home .home-header{
-    color: green;
+#home .content{
+    padding-top: 120px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
 }
 
-#home .home-contennt{
-    color: green;
+#home .left-size-container {
+    min-width: 600px;
 }
+
+#home .right-side-container{
+    min-width:  600px;
+}
+
+#home .home-surname{
+    color: #405D72;
+    font-size: 30px;
+    font-family: 'Roboto', Arial, sans-serif;
+}
+
+#home .home-name{
+    color: #405D72;
+    font-size: 70px;
+}
+
+#home .home-board{
+    margin-left: -7px;
+    background-color: #FFF8F3;
+    width: 376px;
+    padding-left: 10px;
+    border-radius: 10px;
+}
+
+#home .home-content .home-degree{
+    color: green;
+    width: 41%;
+    display: flex;
+    font-size: x-large;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#home .home-image-main-container{
+    width: 500px;
+    height: 600px;
+    margin: auto;
+    padding: 0px;
+}
+
+#home .image-main-container{
+    width: 480px;
+    height: 630px;
+    margin: auto;
+    padding: 0px;
+    background-color: white;
+    box-shadow: -10px 10px 20px rgba(0, 0, 0, 0.8);
+}
+
+#home .image-container{
+    width: 440px;
+    height: 540px;
+    margin: auto;
+    padding: 0px;
+    padding-top: 20px;
+}
+
+#home .home-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+} 
+
 
 #about .about-header{
     color: red;
@@ -99,4 +170,151 @@ footer {
 
 #contact .contact-content{
     color: yellow;
+}
+
+
+
+/* images */
+
+#home .home-profile{
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 80%;
+    max-width: 500px;
+}
+
+@media (max-width: 1024px) {
+    #home {
+        padding-top: 40px;
+        min-height: 1500px;
+    }
+
+    #home .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #home .left-size-container,
+    #home .right-side-container {
+        min-width: 90%;
+        margin-bottom: 30px;
+    }
+
+    #home .home-surname {
+        font-size: 24px;
+        text-align: center;
+    }
+
+    #home .home-name {
+        font-size: 50px;
+        text-align: center;
+    }
+
+    #home .home-board {
+        width: 70%;
+        margin: 5px auto;
+        padding: 15px;
+        text-align: center;
+    }
+
+    #home .home-image-main-container {
+        width: 80%;
+        height: auto;
+    }
+
+    #home .image-main-container {
+        width: 100%;
+        height: auto;
+    }
+
+    #home .image-container {
+        width: 100%;
+        height: auto;
+        padding: 20px 20px 50px 20px;
+    }
+}
+
+#home .content {
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+#home .left-size-container {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+#home .right-side-container {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+#home .home-surname,
+#home .home-name,
+#home .home-board {
+    margin: auto;
+    margin-bottom: 10px;
+}
+
+#home .home-degree {
+    font-size: large;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+@media (max-width: 768px) {
+    #home {
+        padding: 0px;
+        padding-top: 60px;
+        min-height: 1100px;
+    }
+
+    #home .content {
+        flex-direction: column;
+        align-items: center;
+        padding: 0px !important;
+    }
+
+    #home .left-size-container,
+    #home .right-side-container {
+        min-width: 100%;
+        margin-bottom: 20px;
+    }
+
+    #home .home-surname {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    #home .home-name {
+        font-size: 36px;
+        text-align: center;
+    }
+
+    #home .home-board {
+        width: 90%;
+        margin: 0 auto;
+        padding: 10px;
+        text-align: center;
+    }
+
+    #home .home-image-main-container,
+    #home .image-main-container,
+    #home .image-container {
+        width: 90%;
+        height: auto;
+        margin: 0 auto;
+        padding: 10px 0px 20px 0px;
+    }
+
+    #home .home-profile {
+        width: 100%;
+        padding: 10px;
+    }
 }
