--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Matemasie&family=Sankofa+Display&display=swap');
 /* --------------- */
 /* FONTS */
 .matemasie-regular {
@@ -6,15 +6,31 @@
     font-weight: 400;
     font-style: normal;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);    
-  }
+}
+
+.sankofa-display-regular {
+    font-family: "Sankofa Display", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
+}
+  
+.poetsen-one-regular {
+    font-family: "Poetsen One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); 
+}
   
   
+
 /* --------------- */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+     
 }
 
 body {
@@ -100,7 +116,7 @@ footer {
 }
 
 #home .home-surname{
-    font-size: 30px;
+    font-size: 70px;
     font-family: 'Roboto', Arial, sans-serif;
 }
 
@@ -195,7 +211,7 @@ footer {
     }
 
     #home .home-surname {
-        font-size: 24px;
+        font-size: 70px;
         text-align: center;
     }
 
@@ -226,6 +242,15 @@ footer {
         height: auto;
         padding: 20px 20px 50px 20px;
     }
+
+    
+    #about .about-content-container{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        color: #fcf5eb;
+    } 
 }
 
 #home .content {
@@ -281,12 +306,12 @@ footer {
     }
 
     #home .home-surname {
-        font-size: 18px;
+        font-size: 57px;
         text-align: center;
     }
 
     #home .home-name {
-        font-size: 36px;
+        font-size: 57px;
         text-align: center;
     }
 
@@ -310,6 +335,16 @@ footer {
         width: 100%;
         padding: 10px;
     }
+
+    
+    #about .about-content-container{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        color: #fcf5eb;
+    } 
+
 }
 
 #about .about-container{
@@ -345,7 +380,7 @@ footer {
 
 #about .about-header{
     margin-top: 157px;
-    font-size: 35px;
+    font-size: 70px;
 }
 
 #about .about-content{
