edited text and resize font

--- a/index.css
+++ b/index.css
@@ -281,9 +281,9 @@ footer {
 }
 
 #home .home-degree {
-    font-size: large;
     justify-content: center;
     margin-top: 10px;
+    font-size: 12px;
 }
 
 @media (max-width: 768px) {
