resizing the link in home page

--- a/index.css
+++ b/index.css
@@ -386,6 +386,7 @@ footer {
 #about .about-content{
     padding: 76px;
     margin-top: -41px;
+    font-size: 18px;
 }
 
 #about .about-image-container{
